Fixed CLI Errors